--- a/css/style01.css
+++ b/css/style01.css
@@ -1,14 +1,8 @@
 
-body{
-  text-align: center;
-}
 
 
-.wwd{
-  background-color: #393e46;
-  padding-top: 50px;
-  color: #ffffff;
-}
+
+
 
 .logotext{
    font-size: 2rem;
@@ -23,7 +17,7 @@ body{
   font-family: 'Baloo Bhai 2', cursive;
 }
 h1{
-font-family: 'Baloo Bhai 2', cursive;
+font: 'Baloo Bhai 2', cursive;
   size:5rem;
   line-height: 1.5;
 
@@ -40,7 +34,9 @@ h2{
 
 .navbar-brand{
   font-weight: bolder;
+ 
 }
+
 
 .nav-item{
   padding: 0 18px;
@@ -94,4 +90,139 @@ h2{
 
 .image{
   width:100%;
+}
+#box1{
+  color: whitesmoke;
+  /* background-color: #373a41;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 2px solid #373a41;
+  border-bottom-left-radius: 300px;
+  border-bottom-right-radius: 300px; */
+}
+#bx2{
+  background-image:url(https://images.pexels.com/photos/374016/pexels-photo-374016.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+  
+}
+#bx3{
+  background-image:url(https://images.pexels.com/photos/5095944/pexels-photo-5095944.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+  color: white;
+}
+.dark{
+  padding: 13%;
+  color: whitesmoke;
+  background-color: #373a41;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 2px solid #373a41;
+}
+.light{
+  padding: 13%;
+  color:black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 20px;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: darken;
+ 
+}
+#bx1 img{
+ 
+  float: left;
+  display: inline;
+  height: 30%;
+  width: 30%;
+  padding: 0%;
+  margin: 0% 5%;
+  margin-right: 10%;
+  animation: comeout ;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-out;
+  
+}
+#bx1 h1,h2,h4,p{
+  animation: comeoutt;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-out;
+
+}
+@keyframes comeoutt{
+0%{
+  font-size: 130%;
+  margin-left: 10%;
+}
+100%{
+  font-size: 120%;
+  margin-left: 0%;
+}
+}
+@keyframes comeout {
+  0%{
+    height:40%;
+    width:40%;
+  }
+  100%{
+    height:30%;
+    width: 30%;
+  }
+    
+}
+
+#bx2 img{
+ 
+  float: right;
+  display: inline;
+  height: 50%;
+  width: 50%;
+  padding: 0%;
+  margin-left:  10%;
+  animation: movein ;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-out;
+ 
+}
+
+
+
+
+
+#bx3 img{
+  float: right;
+  display: inline;
+  height: 60%;
+  width: 50%;
+  padding: 0%;
+  margin:  0%;
+}
+#bx4 img{
+  float: left;
+  display: inline;
+  height: 50%;
+  width: 50%;
+  padding: 0%;
+  margin-right:  10%;
+}
+#db img{
+  float: left;
+  display: inline;
+  height: 50%;
+  width: 50%;
+  padding: 0%;
+  margin-right:  10%;
+}
+#db h4{
+  padding: 1% 0%;
+}
+.team h2{
+  margin-top: 20%;
+  text-align: center;
+}
+.team p{
+  text-align: center;
 }
